--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trb",
-  "version": "1.1.2",
-  "description": "typeScript+react+mobx+webpack 脚手架",
+  "version": "0.0.1",
+  "description": "typeScript+react+antd+mobx+webpack 脚手架",
   "scripts": {
     "lint": "node lint.js",
     "lint:fix": "npm run lint --fix",
@@ -9,7 +9,7 @@
     "clean:dist": "rimraf ./dist",
     "lib": "npm run clean:lib && webpack --progress --config ./webpack/webpack.lib.conf.js -p",
     "build:anal": "npm run clean:dist && webpack --anal=1",
-    "local": "npm run clean:dist && webpack  --hot=true --watch --hide-modules --env=local --uselocal=1",
+    "local": "webpack-dev-server --env=local --uselocal=1",
     "build": "npm run clean:dist && webpack  --env=production"
   },
   "husky": {
@@ -33,7 +33,6 @@
     "@babel/core": "^7.4.4",
     "@babel/plugin-transform-react-jsx-self": "^7.2.0",
     "@babel/plugin-transform-react-jsx-source": "^7.2.0",
-    "@types/chrome": "^0.0.86",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
     "add-asset-html-webpack-plugin": "^3.1.3",
@@ -42,7 +41,6 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
     "babel-polyfill": "^6.26.0",
-    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "5.2.0",
     "css-loader": "^1.0.0",
     "editorconfig": "^0.15.3",
@@ -53,12 +51,10 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-typescript": "^0.14.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^4.0.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.5",
     "json-loader": "^0.5.7",
-    "jszip": "^3.2.2",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "lint-staged": "^9.2.5",
@@ -73,11 +69,9 @@
     "url-loader": "^1.1.0",
     "webpack": "^4.35.2",
     "webpack-bundle-analyzer": "^3.5.2",
-    "webpack-chrome-extension-reloader": "^0.8.3",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1",
-    "webpack-shell-plugin": "^0.5.0"
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@types/react": "^16.8.17",
